invacost v0.3-7 (Release date: 30 November 2020)
==============
* Changed function names
* Updated to invacost v3.0

invacost v0.3-5 (Release date: 3 November 2020)
==============
* Fixed all CRAN checks warnings and notes
* Changes to documentation before CRAN submission
* Added error checks

invacost v0.3-4 (Release date: 10 August 2020)
==============

* Added a function to make a "pretty" summary of model summaries

invacost v0.3-3 (Release date: 3 August 2020)
==============

* Fixed a bug with RMSE estimation for robust models when data did not have
values for all years
* Added description of columns for the invacost dataset
* Updated to invacost version V2-1
* Added a column with invacost version


invacost v0.3-2 (Release date: 17 July 2020)
==============

* Added a feature in plot-method to allow user to select which model outputs are included
  - This applies to either single plot or facet plot and shares model names
    costTrendOverTime

Fixed erroneous RMSE of GAM models


invacost v0.3-1 (Release date: 7 July 2020)
==============

Fixed a bug in costTrendOverTime when incomplete.years.weight was set to NULL

* General improvements for calculrateRawCosts:
  - added annual costs in the output
  - improved handling of the last year with a new argument

invacost v0.3 (Release date: 3 July 2020)
==============

* Major changes to the models in costTrendOverTime(): 
  - added robust regression models (thanks Andrew Kramer!)
  - changed error estimations for ordinary least square regressions in order
  to account for heteroscedasticity and temporal autocorrelation
  - changed GAM model family to use Gaussian Location-Scale family, in order
  to account for heteroscedasticity
  - added the summary of models directly in the output of costTrendOverTime()
* Added precisions about the error bands for MARS models in the help file

invacost v0.2-4 (Release date: 7 April 2020)
==============

Changes:
